Fix the stripe style on mobile browser

--- a/colorGame.css
+++ b/colorGame.css
@@ -41,7 +41,6 @@ h1 {
 }
 
 #stripe {
-    display: flex;
     background:white;
     height: 35px;
     text-align: center;
